tests/snapshots/runtime_error_fixtures/list_boundary_string_into_list.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/list_boundary_string_into_list.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 9] Compiling  Assert
[2 of 9] Compiling  Array
[3 of 9] Compiling  IO
[4 of 9] Compiling  List
[5 of 9] Compiling  Numeric
[6 of 9] Compiling  Option
[7 of 9] Compiling  String
[8 of 9] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/list_boundary_string_into_list.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `sum_list`.

  examples/runtime_errors/list_boundary_string_into_list.flx:8:10
  |
3 | fn sum_list(xs: List<Int>) -> Int {
  | --------------------------------- `sum_list` expects `List<Int>` as the 1st parameter
4 |     fold(xs, 0, /(acc: Int, x: Int) -> acc + x)
5 | }
6 |
7 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
8 | sum_list(dynamic)
  |          ^^^^^^^
  |          ------- this argument has type `String`

Note:
  expected argument type: List<Int>
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `List<Int>` value as the 1st argument.
